# nvpro_core2

./: .gitmodules
cmake/: CompilerSlangShader.cmake  FindSlang.cmake  FindVulkanExtra.cmake  Utilities.cmake
nvapp/: CMakeLists.txt  application.cpp  application.hpp  elem_default_title.cpp  elem_inspector.cpp  frame_pacer.cpp
nvgl/: CMakeLists.txt  nvpsystem_linux.cpp
nvgui/: CMakeLists.txt  enum_registry.cpp  file_dialog.hpp  file_dialog_linux.cpp
nvslang/: slang.cpp  slang.hpp
nvutils/: CMakeLists.txt  file_operations.cpp  file_operations.hpp  logger.cpp  logger.hpp  parallel_work.hpp
nvvk/: barriers.hpp  check_error.cpp  context.cpp  context.hpp  gbuffers.cpp  gbuffers.hpp  resource_allocator.cpp  resource_allocator.hpp  staging.cpp  swapchain.cpp
nvvkglsl/: CMakeLists.txt  glsl.hpp
